--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <head>
 <link rel = "stylesheet" type = "text/css" href = "style.css">
+<link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="calc.js"></script>
 </head>
 
 <body>
@@ -9,25 +12,25 @@
 
 <div class = "readOut"></div>
 
-<button class = "item nine">9</button>
-<button class = "item eight">8</button>
-<button class = "item seven">7</button>
-<button class = "item six">6</button>
-<button class = "item five">5</button>
-<button class = "item four">4</button>
-<button class = "item three">3</button>
-<button class = "item two">2</button>
-<button class = "item one">1</button>
-<button class = "item zero">0</button>
-<button class = "item decimal">.</button>
+<button class = "item nine" value = "9">9</button>
+<button class = "item eight" value = "8">8</button>
+<button class = "item seven" value = "7">7</button>
+<button class = "item six" value = "6">6</button>
+<button class = "item five" value = "5">5</button>
+<button class = "item four" value = "4">4</button>
+<button class = "item three" value = "3">3</button>
+<button class = "item two" value = "2">2</button>
+<button class = "item one" value = "1">1</button>
+<button class = "item zero" value = "0">0</button>
+<button class = "item decimal" value = ".">.</button>
 
-<button class = "item clear">AC</button>
+<button class = "special clear">AC</button>
 
-<button class = "item opp1">+</button>
-<button class = "item opp2">-</button>
-<button class = "item opp3">/</button>
-<button class = "item opp4">*</button>
-<button class = "item opp5">=</button>
+<button class = "item opp1" value = "+">+</button>
+<button class = "item opp2" value = "-">-</button>
+<button class = "item opp3" value = "/">/</button>
+<button class = "item opp4" value = "*">*</button>
+<button class = "special enter" value = "=">=</button>
 
 
 </div>
