--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <button class = "item opp4" value = "*">*</button>
 <button class = "special enter" value = "=">=</button>
 
-
 </div>
+
+<div class = "footer">Built by <a href = "http://rmcavin.github.io" >Rachel Cavin</a> for a <a href = "http://freecodecamp.com">Free Code Camp</a> project.</div>
 </body>
